--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,4 +20,7 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  rents:
+    mail_subject: 'Heeeeeeeeeello'
+    hello: "Hello :D"
+
